<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prototipo</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="lembrar">Lembrar</string>
    <string name="title_activity_ride">RideActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_new_ride">New Ride</string>
    <string name="profile">Profile</string>
    <string name="allRide">All</string>
    <string name="saida">saida</string>
    <string name="destino">destino</string>
    <string name="add">Add Ride</string>
    <string name="location">Location: </string>
    <string name="interests">Interests: </string>
    <string name="title_activity_user_profile">UserProfile</string>
	<string name="skills">Skills</string>
</resources>